--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,8 @@ nav a:hover {
 }
 
 object {
-  position: relative;
   z-index: 0;
-  top: 60px;
+  margin-top: 60px;
   width: 100%;
 }
 
@@ -48,6 +47,7 @@ body, html {
 padding: 0;
 margin: 0;
 text-align: center;
+font-family: "lexia";
 }
 
 /* Styles the thumbnail */
@@ -56,7 +56,7 @@ a.lightbox img {
 height: 150px;
 border: 3px solid white;
 box-shadow: 0px 0px 8px rgba(0,0,0,.3);
-margin: 100px 20px;
+margin: 20px;
 }
 
 /* Styles the lightbox, removes it from sight and adds the fade-in transition */
